# proof-aggregation

./: .gitignore  Cargo.toml  README.md  block-5_proof.json  run.sh
circuit/: proof1-test.json  run.sh
circuit/src/: main.rs  zkevm_circuit1.rs  zkevm_circuit2.rs
contract/: .env.example  .gitignore  AggregationVerifier.yul  hardhat.config.ts  package-lock.json  package.json
contract/contracts/: Aggregator.sol  IMessageReceiver.sol  Rollup1.sol  Rollup2.sol
contract/data/: agg.json  contractInfo.json  proof2.json
contract/scripts/: 1_deploy_aggregator.ts  2_deploy_and_register_rollups.ts  3_deploy_verifier.ts  4_submit_proofs.ts  5_submit_batch_proof.ts  6_check_gas.ts  log.ts  utils.ts
src/: aggregation.rs  bk.rs  main.rs  taiko_circuit.rs  zkevm_circuit.rs  zkevm_circuit1.rs  zkevm_circuit2.rs
