[package]
name = "proof-aggregation"
version = "0.1.0"
edition = "2021"
authors = ["hao <hao@aoraki-labs.io>"]


[dependencies]

halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }

zkevm-circuits = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", package = "zkevm-circuits", features = ["test"] }
bus-mapping = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", package = "bus-mapping", features = ["test"] }
keccak256 = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", package = "keccak256" }
eth-types = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", package = "eth-types" }
mock = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", package = "mock" }

ark-std = { version = "0.3", features = ["print-trace"] }
rand_xorshift = "0.3"
rand = "0.8"
itertools = "0.10"
env_logger = "0.9"
ethers-signers = "0.17.0"
rand_chacha = "0.3"

halo2_curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.2", package = "halo2curves" }
snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier" }


[profile.release]
opt-level = 3
debug = false
debug-assertions = true
overflow-checks = true
rpath = false
lto = "thin"
incremental = false